// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::CompanyReceivedFilter snapshot shows errors 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-label="Hide The date the CFPB sent the complaint to the company filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      The date the CFPB sent the complaint to the company
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input a-text-input__error"
              id="company_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2016-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear company received from date filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input a-text-input__error"
              id="company_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="2000-01-01"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear company received through date filter
              </span>
            </button>
          </div>
        </li>
      </ul>
      <div>
        'From' date must be less than 'through' date
        <span
          aria-hidden="true"
        >
          <svg
            className="cf-icon-svg cf-icon-delete-round"
          >
            error-round.svg
          </svg>
        </span>
      </div>
    </div>
  </div>
</section>
`;

exports[`component::CompanyReceivedFilter snapshot supports no dates in the Redux Store 1`] = `
<section
  className="o-expandable aggregation date-filter"
>
  <button
    aria-label="Hide The date the CFPB sent the complaint to the company filter"
    className="o-expandable_header o-expandable_target o-expandable_target__expanded"
    onClick={[Function]}
  >
    <h3
      className="h4 o-expandable_header-left o-expandable_label"
    >
      The date the CFPB sent the complaint to the company
    </h3>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <span
        className="o-expandable_cue o-expandable_cue-close"
      >
        <span
          className="u-visually-hidden-on-mobile"
        >
          Hide
        </span>
        <svg>
          minus-round.svg
        </svg>
      </span>
    </span>
  </button>
  <div
    className="o-expandable_content"
  >
    <p />
    <div>
      <ul
        className="date-inputs"
      >
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-from"
          >
            From
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="company_received-from"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="Invalid Date"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear company received from date filter
              </span>
            </button>
          </div>
        </li>
        <li>
          <label
            className="a-label a-label__heading body-copy"
            htmlFor="company_received-through"
          >
            Through
          </label>
          <div
            className="m-btn-inside-input"
          >
            <input
              className="a-text-input"
              id="company_received-through"
              max="2020-05-05"
              min="2011-12-01"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="M/D/YYYY"
              type="date"
              value="Invalid Date"
            />
            <button
              className="a-btn a-btn__link"
              onClick={[Function]}
            >
              <svg>
                error.svg
              </svg>
              <span
                className="u-visually-hidden"
              >
                Clear company received through date filter
              </span>
            </button>
          </div>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
